<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.sonarsource.samples</groupId>
  <artifactId>objectscript-custom-rules</artifactId>
  <packaging>sonar-plugin</packaging>
  <version>1.0</version>
  <name>My Sonar plugin</name>
  <description>plugin description</description>

  <!-- optional -->
  <organization>
    <name>My company</name>
    <url>http://www.mycompany.com</url>
  </organization>
  
 	<properties>
		<sonar.version>7.2</sonar.version>
		<objectscript.version>3.4.6</objectscript.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.sonarsource.sonarqube</groupId>
			<artifactId>sonar-plugin-api</artifactId>
			<version>${sonar.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.sonarsource.objectscript</groupId>
			<artifactId>sonar-objectscript-plugin</artifactId>
			<version>${objectscript.version}</version>
			 <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
  					<artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
			<scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>org.testng</groupId>
		    <artifactId>testng</artifactId>
		    <version>7.4.0</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>



	<build>
		<plugins>
			<plugin>
				<groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
				<artifactId>sonar-packaging-maven-plugin</artifactId>
				<version>1.17</version>
				<extensions>true</extensions>
				<configuration>
					<pluginKey>objectscript-custom</pluginKey>
					<pluginName>Objectscript Custom Rules</pluginName>
					<pluginClass>org.sonar.custom.objectscript.ObjectscriptCustomRulesPlugin</pluginClass>
					<sonarLintSupported>true</sonarLintSupported>
					<sonarQubeMinVersion>6.7</sonarQubeMinVersion>
					<basePlugin>objectscript</basePlugin>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			 <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <version>2.22.2</version>
		        <configuration>
		          <argLine>
		            --add-opens java.base/java.lang=ALL-UNNAMED
		            --add-opens java.base/java.util=ALL-UNNAMED
		          </argLine>
		        </configuration>
		      </plugin>
		</plugins>
	</build>
	

	<repositories>
		 <repository>
	      <id>lite.global</id>
	      <name>Lite Solutions global maven repository</name>
	      <url>https://maven.litesolutions.es/content/repositories/litesolutions-releases/</url>
	    </repository>
	</repositories>
</project>
